Update gitignore and commit UIImageColorAtPoint.
Fixes #1

--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,21 @@
 .repl_history
 build
 tags
+app/pixate_code.rb
 resources/*.nib
 resources/*.momd
 resources/*.storyboardc
 .DS_Store
+nbproject
+.redcar
 *~
 *.sw[po]
-/vendor/
-**/*.xcodeproj/xcuserdata
-/_release/
-**/*.xcuserdata/*
-provisioning/*
-_data
-server
+.eprj
+.sass-cache
+.idea
+.dat*.*
+vendor/Pods/*
+vendor/*/build*/
+.gems
 resources/dropzones.geojson
+provisioning/
