--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react": "16.9.0",
     "react-native": "0.61.5",
     "react-native-elements": "^2.0.0",
+    "react-native-fast-image": "^8.1.5",
     "react-native-geojson": "^0.1.1",
     "react-native-gesture-handler": "^1.5.0",
     "react-native-keychain": "5.0.1",
