--- a/package.json
+++ b/package.json
@@ -53,7 +53,9 @@
     "react-native-safe-area-context": "0.7.3",
     "react-native-safe-area-view": "1.0.0",
     "react-native-screens": "^2.5.0",
+    "react-native-section-list-get-item-layout": "^2.2.3",
     "react-native-splash-screen": "3.2.0",
+    "react-native-tabs-section-list": "^1.0.1",
     "react-native-vector-icons": "^6.6.0",
     "reactotron-mst": "^3.1.1",
     "reactotron-react-native": "^4.0.0-beta.1",
