--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "ramda": "0.27.0",
     "react": "16.9.0",
     "react-native": "0.61.5",
+    "react-native-config": "^1.2.0",
     "react-native-elements": "^2.0.0",
     "react-native-fast-image": "^8.1.5",
     "react-native-geojson": "^0.1.1",
