Upgrade bowser template from 5.0.3->5.2.0
https://github.com/nirre7/ignite-bowser-diff-purge/compare/release/5.0.3..release/5.2.0

Thanks @nirre7!

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,8 +11,8 @@
     "noImplicitThis": true,
     "noUnusedLocals": true,
     "sourceMap": true,
-    "target": "es2015",
-    "lib": ["es7"],
+    "target": "esnext",
+    "lib": ["esnext"],
     "skipLibCheck": true
   },
   "exclude": ["node_modules"],
