--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "adb": "adb reverse tcp:9090 tcp:9090 && adb reverse tcp:3000 tcp:3000 && adb reverse tcp:9001 tcp:9001 && adb reverse tcp:8081 tcp:8081"
   },
   "dependencies": {
-    "@react-native-community/async-storage": "^1.10.1",
+    "@react-native-community/async-storage": "^1.11.0",
     "@react-native-community/geolocation": "^2.0.2",
     "@react-navigation/bottom-tabs": "^5.3.3",
     "@react-navigation/native": "^5.1.5",
@@ -62,14 +62,14 @@
     "validate.js": "0.13.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.6.2",
+    "@babel/core": "^7.10.2",
     "@babel/plugin-proposal-decorators": "^7.0.0",
     "@babel/plugin-proposal-optional-catch-binding": "^7.0.0",
-    "@babel/runtime": "^7.6.2",
+    "@babel/runtime": "^7.10.2",
     "@storybook/addon-storyshots": "5.3.17",
     "@storybook/react-native": "5.3.17",
     "@storybook/react-native-server": "5.3.17",
-    "@types/jest": "25.1.4",
+    "@types/jest": "25.2.2",
     "@types/ramda": "0.26.44",
     "@types/react": "16.9.23",
     "@types/react-native": "0.61.23",
@@ -88,8 +88,8 @@
     "eslint-plugin-react-native": "^3.6.0",
     "eslint-plugin-standard": "^4.0.0",
     "fastlane": "^0.1.0",
-    "ignite-bowser": "^5.0.3",
-    "jest": "^24.9.0",
+    "ignite-bowser": "^5.2.0",
+    "jest": "25.5.4",
     "jetifier": "^1.6.1",
     "metro-react-native-babel-preset": "^0.56.0",
     "npm-run-all": "4.1.5",
@@ -101,7 +101,7 @@
     "react-test-renderer": "16.9.0",
     "rimraf": "3.0.2",
     "solidarity": "3.0.0",
-    "typescript": "3.8.3"
+    "typescript": "3.9.3"
   },
   "jest": {
     "preset": "react-native",
