--- a/package.json
+++ b/package.json
@@ -26,17 +26,17 @@
   "dependencies": {
     "@react-native-community/async-storage": "^1.11.0",
     "@react-native-community/geolocation": "^2.0.2",
-    "@react-navigation/bottom-tabs": "^5.3.3",
-    "@react-navigation/native": "^5.1.5",
+    "@react-navigation/bottom-tabs": "^5.7.3",
+    "@react-navigation/native": "^5.7.2",
     "apisauce": "1.1.1",
-    "i18n-js": "^3.0.11",
-    "lodash": "^4.17.15",
+    "i18n-js": "^3.7.1",
+    "lodash": "^4.17.19",
     "lodash.throttle": "4.1.1",
     "mobx": "^4.15.4",
     "mobx-react-lite": "^1.4.1",
     "mobx-state-tree": "^3.14.1",
     "parse-address": "^1.1.2",
-    "ramda": "0.27.0",
+    "ramda": "0.27.1",
     "react": "16.9.0",
     "react-native": "0.61.5",
     "react-native-elements": "^2.0.2",
@@ -53,14 +53,15 @@
     "react-native-screens": "^2.5.0",
     "react-native-vector-icons": "^6.6.0",
     "reactotron-mst": "^3.1.1",
-    "reactotron-react-native": "^4.0.0-beta.1",
+    "reactotron-react-native": "^5.0.0",
+    "recyclerlistview": "^3.0.0",
     "validate.js": "0.13.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.10.2",
+    "@babel/core": "^7.10.5",
     "@babel/plugin-proposal-decorators": "^7.0.0",
     "@babel/plugin-proposal-optional-catch-binding": "^7.0.0",
-    "@babel/runtime": "^7.10.2",
+    "@babel/runtime": "^7.10.5",
     "@storybook/addon-storyshots": "5.3.17",
     "@storybook/react-native": "5.3.17",
     "@storybook/react-native-server": "5.3.17",
@@ -72,7 +73,7 @@
     "@types/react-test-renderer": "16.9.2",
     "@typescript-eslint/eslint-plugin": "^2.24.0",
     "@typescript-eslint/parser": "^2.24.0",
-    "babel-jest": "^24.9.0",
+    "babel-jest": "^26.2.0",
     "eslint": "^6.6.0",
     "eslint-config-prettier": "^6.0.0",
     "eslint-config-standard": "^14.1.0",
@@ -83,10 +84,10 @@
     "eslint-plugin-react-native": "^3.6.0",
     "eslint-plugin-standard": "^4.0.0",
     "fastlane": "^0.1.0",
-    "ignite-bowser": "^5.2.0",
+    "ignite-bowser": "^5.2.1",
     "jest": "25.5.4",
     "jetifier": "^1.6.1",
-    "metro-react-native-babel-preset": "^0.56.0",
+    "metro-react-native-babel-preset": "^0.61.0",
     "npm-run-all": "4.1.5",
     "patch-package": "6.2.2",
     "postinstall-prepare": "1.0.1",
