--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "adb": "adb reverse tcp:9090 tcp:9090 && adb reverse tcp:3000 tcp:3000 && adb reverse tcp:9001 tcp:9001 && adb reverse tcp:8081 tcp:8081"
   },
   "dependencies": {
+    "@gorhom/animated-tabbar": "^2.0.0",
     "@react-native-community/async-storage": "^1.11.0",
     "@react-native-community/geolocation": "^2.0.2",
+    "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/bottom-tabs": "^5.7.3",
     "@react-navigation/native": "^5.7.2",
     "apisauce": "1.1.1",
@@ -48,7 +50,8 @@
     "react-native-maps": "0.27.1",
     "react-native-open-maps": "^0.3.5",
     "react-native-parallax-scroll-view": "^0.21.3",
-    "react-native-safe-area-context": "^3.0.6",
+    "react-native-reanimated": "^1.10.1",
+    "react-native-safe-area-context": "^3.1.1",
     "react-native-safe-area-view": "^2.0.0",
     "react-native-screens": "^2.5.0",
     "react-native-vector-icons": "^6.6.0",
