Update to new version of react-native-elements with declaritive mode.

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@react-native-community/async-storage": "^1.11.0",
     "@react-native-community/geolocation": "^2.0.2",
     "@react-native-community/masked-view": "^0.1.10",
+    "@react-native-community/toolbar-android": "^0.1.0-rc.2",
     "@react-navigation/bottom-tabs": "^5.7.3",
     "@react-navigation/native": "^5.7.2",
     "apisauce": "1.1.1",
@@ -41,7 +42,7 @@
     "ramda": "0.27.1",
     "react": "16.9.0",
     "react-native": "0.61.5",
-    "react-native-elements": "^2.0.2",
+    "react-native-elements": "^2.3.2",
     "react-native-fast-image": "^8.1.5",
     "react-native-gesture-handler": "^1.5.0",
     "react-native-localize": "^1.0.0",
@@ -54,7 +55,8 @@
     "react-native-safe-area-context": "^3.1.1",
     "react-native-safe-area-view": "^2.0.0",
     "react-native-screens": "^2.5.0",
-    "react-native-vector-icons": "^6.6.0",
+    "react-native-svg": "^12.1.0",
+    "react-native-vector-icons": "^7.0.0",
     "reactotron-mst": "^3.1.1",
     "reactotron-react-native": "^5.0.0",
     "recyclerlistview": "^3.0.0",
