--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "ramda": "0.27.1",
     "react": "16.9.0",
     "react-native": "0.61.5",
+    "react-native-device-info": "^6.0.3",
     "react-native-elements": "^2.3.2",
     "react-native-fast-image": "^8.1.5",
     "react-native-gesture-handler": "^1.5.0",
@@ -56,6 +57,7 @@
     "react-native-safe-area-view": "^2.0.0",
     "react-native-screens": "^2.5.0",
     "react-native-svg": "^12.1.0",
+    "react-native-svg-transformer": "^0.14.3",
     "react-native-vector-icons": "^7.0.0",
     "reactotron-mst": "^3.1.1",
     "reactotron-react-native": "^5.0.0",
