Update Address parser and link builder.

--- a/ios/Dropzones/Info.plist
+++ b/ios/Dropzones/Info.plist
@@ -20,7 +20,12 @@
 	<string>3.0.0</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
-	<key>CFBundleURLTypes</key>
+  <key>LSApplicationQueriesSchemes</key>
+  <array>
+    <string>comgooglemaps</string>
+    <string>waze</string>
+  </array>
+  <key>CFBundleURLTypes</key>
 	<array>
 		<dict>
 			<key>CFBundleTypeRole</key>
