--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "react-native-mail": "^4.1.0",
     "react-native-map-clustering": "^3.3.9",
     "react-native-maps": "^0.27.1",
-    "react-native-open-maps": "^0.3.5",
+    "react-native-open-map": "^3.0.2",
     "react-native-parallax-scroll-view": "^0.21.3",
     "react-native-reanimated": "^1.10.1",
     "react-native-safe-area-context": "^3.1.1",
