--- a/ios/Dropzones/Info.plist
+++ b/ios/Dropzones/Info.plist
@@ -17,15 +17,21 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>3.0.0</string>
+	<string>3.0.1</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
-  <key>LSApplicationQueriesSchemes</key>
-  <array>
-    <string>comgooglemaps</string>
-    <string>waze</string>
-  </array>
-  <key>CFBundleURLTypes</key>
+	<key>LSApplicationQueriesSchemes</key>
+	<array>
+		<string>comgooglemaps</string>
+		<string>citymapper</string>
+		<string>uber</string>
+		<string>lyft</string>
+		<string>navigon</string>
+		<string>transit</string>
+		<string>waze</string>
+		<string>moovit</string>
+	</array>
+	<key>CFBundleURLTypes</key>
 	<array>
 		<dict>
 			<key>CFBundleTypeRole</key>
@@ -39,7 +45,7 @@
 		</dict>
 	</array>
 	<key>CFBundleVersion</key>
-	<string>152</string>
+	<string>153</string>
 	<key>ITSAppUsesNonExemptEncryption</key>
 	<false/>
 	<key>LSRequiresIPhoneOS</key>
