--- a/package.json
+++ b/package.json
@@ -30,35 +30,35 @@
   "dependencies": {
     "@expo/webpack-config": "~0.12.63",
     "@gorhom/animated-tabbar": "^2.1.2",
-    "@react-native-async-storage/async-storage": "~1.15.0",
-    "@react-native-community/masked-view": "0.1.10",
+    "@react-native-async-storage/async-storage": "~1.15.7",
+    "@react-native-community/masked-view": "0.1.11",
     "@react-navigation/bottom-tabs": "^6.0.5",
     "@react-navigation/native": "~6.0.1",
     "@react-navigation/native-stack": "^6.0.2",
     "@react-navigation/stack": "~6.0.1",
     "@unimodules/core": "~7.1.1",
-    "apisauce": "2.0.0",
+    "apisauce": "~2.1.1",
     "expo": "^42.0.0",
     "expo-linear-gradient": "~9.2.0",
     "expo-localization": "~10.2.0",
     "expo-location": "~12.1.2",
     "expo-status-bar": "~1.0.4",
     "i18n-js": "3.8.0",
-    "mobx": "6.1.8",
-    "mobx-react-lite": "3.2.0",
-    "mobx-state-tree": "5.0.1",
+    "mobx": "6.3.3",
+    "mobx-react-lite": "3.2.1",
+    "mobx-state-tree": "5.0.2",
     "parse-address": "^1.1.2",
-    "query-string": "7.0.0",
+    "query-string": "7.0.1",
     "react": "16.13.1",
     "react-native": "0.63.4",
     "react-native-elements": "^3.4.2",
     "react-native-fast-image": "^8.3.7",
     "react-native-gesture-handler": "~1.10.2",
-    "react-native-keychain": "6.2.0",
+    "react-native-keychain": "7.0.0",
     "react-native-mail": "^6.1.1",
     "react-native-map-clustering": "^3.4.2",
-    "react-native-maps": "0.28.0",
-    "react-native-open-maps": "^0.3.6",
+    "react-native-maps": "0.29.3",
+    "react-native-open-maps": "^0.4.0",
     "react-native-parallax-scroll-view": "^0.21.3",
     "react-native-reanimated": "~2.2.0",
     "react-native-safe-area-context": "3.2.0",
@@ -106,16 +106,16 @@
     "jest-expo": "^42.0.0",
     "jetifier": "1.6.6",
     "npm-run-all": "4.1.5",
-    "patch-package": "6.2.2",
+    "patch-package": "6.4.7",
     "postinstall-prepare": "1.0.1",
     "prettier": "2.2.1",
     "react-devtools-core": "4.10.1",
     "react-dom": "16.13.1",
     "react-native-clean-project": "^3.6.3",
-    "react-native-web": "~0.13.12",
+    "react-native-web": "~0.17.1",
     "react-powerplug": "1.0.0",
-    "solidarity": "2.3.1",
-    "typescript": "~4.0.0"
+    "solidarity": "3.0.4",
+    "typescript": "~4.4.2"
   },
   "jest": {
     "preset": "jest-expo",
