--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "@expo/webpack-config": "~0.12.63",
     "@gorhom/animated-tabbar": "^2.1.2",
     "@react-native-async-storage/async-storage": "~1.15.7",
-    "@react-native-community/masked-view": "0.1.11",
+    "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/bottom-tabs": "^6.0.5",
     "@react-navigation/native": "~6.0.1",
     "@react-navigation/native-stack": "^6.0.2",
@@ -43,11 +43,11 @@
     "expo-localization": "~10.2.0",
     "expo-location": "~12.1.2",
     "expo-status-bar": "~1.0.4",
+    "geojson-places": "^1.0.3",
     "i18n-js": "3.8.0",
     "mobx": "6.3.3",
     "mobx-react-lite": "3.2.1",
     "mobx-state-tree": "5.0.2",
-    "parse-address": "^1.1.2",
     "query-string": "7.0.1",
     "react": "16.13.1",
     "react-native": "0.63.4",
@@ -57,7 +57,7 @@
     "react-native-keychain": "7.0.0",
     "react-native-mail": "^6.1.1",
     "react-native-map-clustering": "^3.4.2",
-    "react-native-maps": "0.29.3",
+    "react-native-maps": "0.28.0",
     "react-native-open-maps": "^0.4.0",
     "react-native-parallax-scroll-view": "^0.21.3",
     "react-native-reanimated": "~2.2.0",
