--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
   "expo": {
     "name": "Dropzones",
     "slug": "Dropzones",
-    "version": "1.0.0",
+    "version": "3.1.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
     "splash": {
@@ -22,7 +22,7 @@
       "bundleIdentifier": "io.otgapps.dropzones",
       "supportsTablet": true,
       "infoPlist": {
-        "NSLocationWhenInUseUsageDescription": "Used to see how far away you are from the closest dropzone!"
+        "NSLocationWhenInUseUsageDescription": "We use your location to find your closest USPA member dropzone."
       }
     },
     "web": {
