--- a/package.json
+++ b/package.json
@@ -45,9 +45,10 @@
     "expo-application": "~7.0.8",
     "expo-build-properties": "~1.0.9",
     "expo-dev-client": "~6.0.12",
+    "expo-device": "~8.0.10",
     "expo-font": "~14.0.8",
     "expo-linear-gradient": "~15.0.8",
-    "expo-localization": "~17.0.7",
+    "expo-localization": "~17.0.8",
     "expo-location": "~19.0.8",
     "expo-splash-screen": "~31.0.10",
     "expo-status-bar": "~3.0.9",
