--- a/package.json
+++ b/package.json
@@ -67,7 +67,6 @@
     "react-native": "0.81.5",
     "react-native-drawer-layout": "^4.0.1",
     "react-native-edge-to-edge": "~1.6.1",
-    "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-keyboard-controller": "1.18.5",
     "react-native-mail": "^6.1.1",
@@ -75,10 +74,12 @@
     "react-native-maps": "1.20.1",
     "react-native-mmkv": "3.3.3",
     "react-native-open-maps": "^0.4.0",
+    "react-native-paper": "^5.14.5",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-svg": "15.12.1",
+    "react-native-vector-icons": "^10.3.0",
     "react-native-web": "~0.21.0",
     "react-native-worklets": "0.6.1",
     "reactotron-mst": "3.1.3",
@@ -92,6 +93,7 @@
     "@testing-library/react-native": "^13.2.0",
     "@types/jest": "^29.5.14",
     "@types/react": "~19.1.10",
+    "@types/react-native-vector-icons": "^6.4.18",
     "babel-jest": "^29.2.1",
     "dependency-cruiser": "^17.0.2",
     "eslint": "^8.57.0",
