add expo-sqlite to the app dependencies

--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "expo-localization": "~17.0.8",
     "expo-location": "~19.0.8",
     "expo-splash-screen": "~31.0.13",
+    "expo-sqlite": "~16.0.10",
     "expo-status-bar": "~3.0.9",
     "expo-system-ui": "~6.0.9",
     "geojson-places": "1.0.8",
