fix database synchronization

--- a/package.json
+++ b/package.json
@@ -96,6 +96,7 @@
     "@types/react": "~19.1.17",
     "@types/react-native-vector-icons": "^6.4.18",
     "babel-jest": "^29.7.0",
+    "babel-plugin-inline-import": "^3.0.0",
     "dependency-cruiser": "^17.3.6",
     "eslint": "^8.57.1",
     "eslint-config-expo": "~10.0.0",
