--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   },
   "dependencies": {
     "@expo-google-fonts/space-grotesk": "^0.4.1",
+    "@expo/fingerprint": "~0.15.4",
     "@expo/metro-runtime": "~6.1.2",
     "@gorhom/bottom-sheet": "^5.2.8",
     "@react-native-masked-view/masked-view": "~0.3.2",
@@ -82,7 +83,6 @@
   },
   "devDependencies": {
     "@babel/core": "^7.28.5",
-    "puppeteer": "^24.34.0",
     "@babel/preset-env": "^7.28.5",
     "@babel/runtime": "^7.28.4",
     "@testing-library/react-native": "^13.3.3",
@@ -102,6 +102,7 @@
     "jest": "~29.7.0",
     "jest-expo": "~54.0.16",
     "prettier": "^3.7.4",
+    "puppeteer": "^24.34.0",
     "react-test-renderer": "19.1.0",
     "reactotron-core-client": "^2.9.9",
     "reactotron-react-js": "^3.3.17",
